src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail28.jova
class MyClass {
    MyClass() {

    }

    MyClass(int test) {

    }

    MyClass (String s) {

    }
}

class Main{

    public int main(){
        MyClass myclass;
        MyClass foo;
        String a;
        int z;
        foo = new MyClass(z);

        myclass = new MyClass;
        foo     = new MyClass();
        a       = "test";
        foo     = new MyClass(a);
        z       = 2;

        return 0;

    }
}